Added fix for condition where user sets, then resets the MessageListener